--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "create-react-app": "1.4.1",
     "gulp": "^3.9.1",
     "jscs": "^3.0.7",
+    "jquery": "^3.2.1",
     "node-sass-chokidar": "^0.0.3",
     "react": "latest",
     "react-addons-css-transition-group": "^15.6.2",
@@ -15,7 +16,8 @@
     "react-router-dom": "latest",
     "react-scripts": "1.0.14",
     "webpack": "^3.7.1",
-    "yarn": "^1.2.0"
+    "yarn": "^1.2.0",
+    "axios": "latest"
   },
   "scripts": {
     "watch-css": "npm run build-css && node-sass-chokidar src/css/ -o src/css/ --watch --recursive",
@@ -25,7 +27,6 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "axios": "^0.17.1",
     "gulp": "^3.9.1",
     "gulp-cssmin": "^0.1.6",
     "gulp-imagemin": "^2.1.0",
